# product-mcp-server

./: .dockerignore  .gitignore  CSV_CLASSIFIER_README.md  ML_CLASSIFIER_README.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  docker-compose.yml  pyproject.toml  rebuild_and_test.ps1  test_timing.py
api/: .dockerignore  Dockerfile  README.md  csv_classifier.pkl  pyproject.toml  pytest.ini  test_choosing_tool_from_text.py  train_in_container.py
api/chat_api/: app.py  config.py  extract.py  init.py  main.py
api/chat_api/chat/: schemas.py  views.py
api/chat_api/classifier/: __init__.py  argument_extractor.py  csv_classifier.py  models.py  persistence.py
api/chat_api/classifier/training/: __init__.py  csv_loader.py  ml_classifier.py  train_classifier.py  trainer.py
api/chat_api/classifier/training/patterns/: parameterized_queries.csv  relationship_queries.csv  simple_queries.csv
api/chat_api/ml_classifier/: __init__.py  extractors.py  joint_classifier.py  models.py  patterns.py  processors.py
api/chat_api/nlp/: README.md  __init__.py  config.py  env_example.txt  extractor.py  test_nlp.py  utils.py
api/tests/: conftest.py  test_app.py  test_config.py  test_schemas.py  test_views.py
mcp/: .gitignore  Dockerfile  README.md  pyproject.toml  test_choosing_tool_from_text.py
mcp/mcp_api/: __init__.py  app.py  config.py  datbase.py  main.py
mcp/mcp_api/product/: __init__.py  crud.py  models.py  schemas.py  views.py
mcp/tests/: __init__.py  conftest.py  run_tests.py  test_app.py  test_config.py  test_crud.py  test_database.py  test_main.py  test_models.py  test_schemas.py  test_views.py
ollama/: Dockerfile
