[project]
name = "product-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "mcp>=1.12.4",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "fastapi-mcp @ git+https://github.com/tadata-org/fastapi_mcp",
    "aiosqlite>=0.19.0",
    "numpy>=1.26.0",
    "langchain-community>=0.3.27",
    "faiss-cpu>=1.12.0",
    "sentence-transformers>=5.1.0",
    "requests>=2.32.4",
]
