[project]
name = "ai-chat-api"
version = "0.1.0"
description = "AI Chat API Service with MCP Integration"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "mcp>=1.12.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "starlette>=0.38.0",
    "requests>=2.31.0",
    "langchain-community>=0.0.20",
    "langchain>=0.3.0",
    "faiss-cpu>=1.7.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_api"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]
